--- a/pages/bio.html
+++ b/pages/bio.html
@@ -32,17 +32,22 @@
 
     <div class='main'>
         <div class='portfolio-item'>
+          <div class="">
 
+          </div>
           <div id="bio-text" class='portfolio-text'>
             <h2>About Me</h2>
 
             <p>
-              Hi! My name is Alia Toth-Smith.
-              I am a writer, programmer, and designer. I also like to assist with production activites.
+              Alia Toth-Smith is a writer, designer, and programmer
+              currently pursuing a B.A. in <i>Art and Design:Games
+              and Playable Media</i> at University of California, Santa Cruz.
+              She uses her creative, technical, and analytical tools to produce creative projects in a variety of genres.
+              <br><br>
+              In her free time, she likes to play with her dog, write fiction, and spend time with her family
 
-              I'm currently pursuing a Bachelors of Arts in Art & Design: Games & Playable Media (AGPM).
-              I grew up in the Bay Area.
-              In my free time, I like to write fiction, sing, read DND books, and play with my dog, Charlotte.
+              In Spring 2021, she worked as an assistant director on the French play for the Miriam Ellis International Playhouse.
+
             </p>
           </div>
 
