--- a/pages/bio.html
+++ b/pages/bio.html
@@ -36,23 +36,26 @@
 
           </div>
           <div id="bio-text" class='portfolio-text'>
-            <h2>About Me</h2>
+            <h1>About Me</h1>
 
             <p>
               Alia Toth-Smith is a writer, designer, and programmer
               currently pursuing a B.A. in <i>Art and Design:Games
               and Playable Media</i> at University of California, Santa Cruz.
               She uses her creative, technical, and analytical tools to produce creative projects in a variety of genres.
+              She's currently exploring sound design, table top role-playing games, and short, story-based games.
               <br><br>
-              In her free time, she likes to play with her dog, write fiction, and spend time with her family
-
+              In her free time, she likes to play with her dog, write fiction, and spend time with her family.
+              <br><br>
               In Spring 2021, she worked as an assistant director on the French play for the Miriam Ellis International Playhouse.
 
             </p>
           </div>
 
           <div id='bio-img' class='portfolio-img'>
-            <img src="../img/main/elf-alia.JPG" alt="A picture of Alia Toth-Smith. She is a young adult, asian, and female presenting. She is wearing a sea-green wig, prosthetic elf ears, long fake eyelashes, and black lipstick.">
+            <img src="../img/bio/profile.jpg" alt="A picture of Alia Toth-Smith from the shoulders up.
+            She is a young adult, asian, and female presenting with long black hair. She is wearing
+            a long-sleeved white button-up shirt.">
           </div>
 
         </div>
