--- a/pages/bio.html
+++ b/pages/bio.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Resume</title>
+    <title>About Me</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../css/small-screen.css">
